--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                     <li class="nav-item"><a class="nav-link"> Для мужчин</a></li>
                     <li class="nav-item"><a class="nav-link"> Для женщин</a></li>
                     <li class="nav-item"><a class="nav-link"> Для детей</a></li>
-
                 </ul>
             </nav>
 
@@ -49,7 +48,7 @@
             </div>
             <div class="main-item box">
                 <div class="box-price">
-                    <strike class="box-price_old">9 900 ₽ </strike>
+                    <strike class="box-price_old">9 900 ₽</strike>
                     <p class="box-price_new"> 1 900 ₽ </p>
                 </div>
                 <img class="box-image" src="img/running_shoes_PNG5823.png" alt="Shoes">
@@ -105,7 +104,8 @@
             </div>
 
         </div>
-        <a class="btn btn-centr" href=""><span>Все модели</span><img src="img/Arrow.svg" alt="Arrow"></a>
+        <a class="btn btn-center" href=""><span class="middle">Все модели</span><img src="img/Arrow.svg"
+                                                                                     alt="Arrow"></a>
     </div>
 
 </div>
@@ -117,34 +117,39 @@
             </div>
 
             <div class="footer-nav">
-                <ul class="footer-list"></ul>
-                <li class="footer-list-item footer-list-title">Основные ссылки</li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">О компании</a></li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Каталог</a></li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Доставка</a></li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Оплата</a></li>
-                </ui>
-                <ui class="footer-list"
-                <li class="footer-list-item footer-list-title">Категории</li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Мужская одежда</a></li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Женская одежда</a></li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Детская одежда</a></li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Для животных</a></li>
-                </ui>
-                <ui class="footer-list"
-                <li class="footer-list-item footer-list-title">Категории</li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Мужская одежда</a></li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Женская одежда</a></li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Детская одежда</a></li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Для животных</a></li>
-                </ui>
-                <ui class="footer-list"
-                <li class="footer-list-item footer-list-title">Категории</li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Мужская одежда</a></li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Женская одежда</a></li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Детская одежда</a></li>
-                <li class="footer-list-item"><a class="footer-list-link" href="">Для животных</a></li>
-                </ui>
+                <ul class="footer-list">
+                    <li class="footer-list-item footer-list-title">Основные ссылки</li>
+                    <li class="footer-list-item"><a class="footer-list-link" href="#">О компании</a></li>
+                    <li class="footer-list-item"><a class="footer-list-link" href="#">Каталог</a></li>
+                    <li class="footer-list-item"><a class="footer-list-link" href="#">Доставка</a></li>
+                    <li class="footer-list-item"><a class="footer-list-link" href="#">Оплата</a></li>
+                </ul>
+                <ul class="footer-list">
+                    <li class="footer-list-item footer-list-title">Категории</li>
+                    <li class="footer-list-item"><a class="footer-list-link" href="#">Мужская одежда</a></li>
+                    <li class="footer-list-item"><a class="footer-list-link" href="#">Женская одежда</a></li>
+                    <li class="footer-list-item"><a class="footer-list-link" href="#">Детская одежда</a></li>
+                    <li class="footer-list-item"><a class="footer-list-link" href="#">Для животных</a></li>
+                </ul>
+                <ul class="footer-list">
+                    <li class="footer-list-item footer-list-title">Полезные ссылки</li>
+                    <li class="footer-list-item"><a class="footer-list-link" href="#">Таблица размеров</a></li>
+                    <li class="footer-list-item"><a class="footer-list-link" href="#">Блог о моде</a></li>
+                    <li class="footer-list-item"><a class="footer-list-link" href="#">Наша миссия</a></li>
+                </ul>
+                <ul class="footer-list">
+                    
+                    <li class="footer-list-item footer-list-title">Соц сети</li>
+                    <li class="footer-list-item"><a class="footer-list-link" href="#"><img class="link-img"
+                                                                                           src="/img/vk.svg" alt="VK">VK.com</a>
+                    </li>
+                    <li class="footer-list-item"><a class="footer-list-link" href="#"><img class="link-img"
+                                                                                           src="/img/fb.png" alt="FB">Facebook</a>
+                    </li>
+                    <li class="footer-list-item"><a class="footer-list-link" href="#"><img class="link-img"
+                                                                                           src="/img/inst.png"
+                                                                                           alt="INST">Instagram</a></li>
+                </ul>
 
             </div>
         </footer>
